[package]
name = "quafu-agent"
version = "0.1.0"
edition = "2021"

[profile.release]
lto = true
opt-level = "z"
strip = "symbols"
codegen-units = 1

[profile.dev]
lto = true
opt-level = 3
codegen-units = 1

[dependencies]
reqwest = { version = "0.12.5", features = ["json", "blocking", "native-tls-vendored"] }
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
log4rs = {version = "1.3.0", features = ["threshold_filter"]}
log = "0.4.20"
dotenv = "0.15.0"
